Changed some text in index.html.

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Tulen | Photography HTML Template</title>
+	<title>Covid Central</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Tulen Photography HTML Template"">
+	<!--meta name="description" content="Tulen Photography HTML Template""-->
+	<meta name="description" content="Covid Central">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
@@ -48,8 +49,9 @@
 			<div class="menu-close">
 				<i class="ti-arrow-left"></i>
 			</div>
-			<a href="index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
+			<a href="index.html" class="site-logo" style="background-color: black;">
+				<!--img src="img/logo.png" alt=""-->
+				<h4 style="color:white; background-color:black;">Covid Central</h4> <!--We can put a logo in here later-->
 			</a>
 		</div>
 		<nav class="main-menu">
@@ -81,51 +83,51 @@
     		<div class="pana-accordion-wrap">
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/5.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/1.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/2.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/3.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/4.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
@@ -135,51 +137,51 @@
 			<div class="hero-slider owl-carousel">
 				<div class="hero-item set-bg" data-setbg="img/hero/5.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
+						<div class="pa-tag">Hackquarantine App</div>
 						<h2>69 Flavio Burg Suite</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/1.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/2.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/3.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/4.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
 				</div>
