--- a/site/index.html
+++ b/site/index.html
@@ -81,17 +81,7 @@
 	<section class="hero-section">
 		<div class="pana-accordion" id="accordion">
     		<div class="pana-accordion-wrap">
-				<div class="pana-accordion-item set-bg" data-setbg="img/hero/5.jpg">
-					<div class="pa-text">
-						<div class="pa-tag">Hackquarantine App</div>
-						<h2>Covid Central</h2>
-						<div class="pa-author">
-							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
-						</div>
-					</div>
-				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/hero/1.jpg">
+				<div class="pana-accordion-item set-bg" data-setbg="img/hero/aditya.jpeg"">
 					<div class="pa-text">
 						<div class="pa-tag">Hackquarantine App</div>
 						<h2>Covid Central</h2>
@@ -102,6 +92,16 @@
 					</div>
 				</div>
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/2.jpg">
+					<div class="pa-text">
+						<div class="pa-tag">Hackquarantine App</div>
+						<h2>Covid Central</h2>
+						<div class="pa-author">
+							<!--img src="img/Hero/author.jpg" alt=""-->
+							<h4>Aditya Rawat, JohnPaul Vela</h4>
+						</div>
+					</div>
+				</div>
+				<div class="pana-accordion-item set-bg" data-setbg="img/hero/covidmap.jpg">
 					<div class="pa-text">
 						<div class="pa-tag">Hackquarantine App</div>
 						<h2>Covid Central</h2>
