made some quick chanes. i think when i commented a few of the unused divs, the mobile part failed. I fixed the type on the sm-socail to sm-social

--- a/site/about.html
+++ b/site/about.html
@@ -62,7 +62,7 @@
 			</ul>
 		</nav>
 		<div class="sm-footer">
-			<div class="sm-socail">
+			<div class="sm-social">
 				<a href="#"><i class="ti-facebook"></i></a>
 				<a href="#"><i class="ti-twitter-alt"></i></a>
 				<a href="#"><i class="ti-linkedin"></i></a>
