--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
 	<title>Covid Central</title>
 	<meta charset="UTF-8">
@@ -8,14 +9,14 @@
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/themify-icons.css"/>
-	<link rel="stylesheet" href="css/accordion.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/themify-icons.css" />
+	<link rel="stylesheet" href="css/accordion.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css" />
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style.css" />
 
 
 	<!--[if lt IE 9]>
@@ -24,6 +25,7 @@
 	<![endif]-->
 
 </head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -51,7 +53,8 @@
 			</div>
 			<a href="index.html" class="site-logo" style="background-color: black;">
 				<!--img src="img/logo.png" alt=""-->
-				<h4 style="color:white; background-color:black;">Covid Central</h4> <!--We can put a logo in here later-->
+				<h4 style="color:white; background-color:black;">Covid Central</h4>
+				<!--We can put a logo in here later-->
 			</a>
 		</div>
 		<nav class="main-menu">
@@ -64,15 +67,22 @@
 			</ul>
 		</nav>
 		<div class="sm-footer">
-			<div class="sm-socail">
+			<div class="sm-social">
 				<a href="#"><i class="ti-facebook"></i></a>
 				<a href="#"><i class="ti-twitter-alt"></i></a>
 				<a href="#"><i class="ti-linkedin"></i></a>
 				<a href="#"><i class="ti-instagram"></i></a>
 			</div>
-			<div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>, Aditya Rawat, and John-Paul Vela
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+			<div class="copyright-text">
+				<p>
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+					made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+						target="_blank">Colorlib</a>, Aditya Rawat, and John-Paul Vela
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				</p>
+			</div>
 		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
@@ -80,81 +90,81 @@
 	<!-- Hero Section end -->
 	<section class="hero-section">
 		<div class="pana-accordion" id="accordion">
-    		<div class="pana-accordion-wrap">
+			<div class="pana-accordion-wrap">
 				<div class="pana-accordion-item set-bg" data-setbg="img/hero/aditya.jpeg"">
-					<div class="pa-text">
-						<div class="pa-tag">Hackquarantine App</div>
-						<h2>Covid Central</h2>
-						<div class="pa-author">
-							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
-						</div>
+					<div class=" pa-text">
+					<div class="pa-tag">Hackquarantine App</div>
+					<h2>Covid Central</h2>
+					<div class="pa-author">
+						<!--img src="img/Hero/author.jpg" alt=""-->
+						<h4>Aditya Rawat, JohnPaul Vela</h4>
 					</div>
 				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/hero/2.jpg">
-					<div class="pa-text">
-						<div class="pa-tag">Hackquarantine App</div>
-						<h2>Covid Central</h2>
-						<div class="pa-author">
-							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
-						</div>
+			</div>
+			<div class="pana-accordion-item set-bg" data-setbg="img/hero/2.jpg">
+				<div class="pa-text">
+					<div class="pa-tag">Covid Central</div>
+					<h2>App 1</h2>
+					<div class="pa-author">
+						<!--img src="img/Hero/author.jpg" alt=""-->
+						<h4>Aditya Rawat, JohnPaul Vela</h4>
 					</div>
 				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/hero/covidmap.jpg">
-					<div class="pa-text">
-						<div class="pa-tag">Hackquarantine App</div>
-						<h2>Covid Central</h2>
-						<div class="pa-author">
-							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
-						</div>
+			</div>
+			<div class="pana-accordion-item set-bg" data-setbg="img/hero/covidmap.jpg">
+				<div class="pa-text">
+					<div class="pa-tag">Covid Central</div>
+					<h2>App 2</h2>
+					<div class="pa-author">
+						<!--img src="img/Hero/author.jpg" alt=""-->
+						<h4>Aditya Rawat, JohnPaul Vela</h4>
 					</div>
 				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/hero/3.jpg">
-					<div class="pa-text">
-						<div class="pa-tag">Hackquarantine App</div>
-						<h2>Covid Central</h2>
-						<div class="pa-author">
-							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
-						</div>
+			</div>
+			<div class="pana-accordion-item set-bg" data-setbg="img/hero/3.jpg">
+				<div class="pa-text">
+					<div class="pa-tag">Covid Central</div>
+					<h2>App 3</h2>
+					<div class="pa-author">
+						<!--img src="img/Hero/author.jpg" alt=""-->
+						<h4>Aditya Rawat, JohnPaul Vela</h4>
 					</div>
 				</div>
-				<div class="pana-accordion-item set-bg" data-setbg="img/hero/4.jpg">
-					<div class="pa-text">
-						<div class="pa-tag">Hackquarantine App</div>
-						<h2>Covid Central</h2>
-						<div class="pa-author">
-							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
-						</div>
+			</div>
+			<div class="pana-accordion-item set-bg" data-setbg="img/hero/4.jpg">
+				<div class="pa-text">
+					<div class="pa-tag">Covid Central</div>
+					<h2>App 4</h2>
+					<div class="pa-author">
+						<!--img src="img/Hero/author.jpg" alt=""-->
+						<h4>Aditya Rawat, JohnPaul Vela</h4>
 					</div>
 				</div>
-	    	</div>
+			</div>
+		</div>
 		</div>
 		<div class="hero-slider-warp">
-			<div class="hero-slider owl-carousel">
+			<!-- <div class="hero-slider owl-carousel">
 				<div class="hero-item set-bg" data-setbg="img/hero/5.jpg">
 					<div class="pa-text">
 						<div class="pa-tag">Hackquarantine App</div>
 						<h2>69 Flavio Burg Suite</h2>
-						<div class="pa-author">
+						<div class="pa-author"> -->
 							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
+							<!-- <h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
-				</div>
-				<div class="hero-item set-bg" data-setbg="img/hero/1.jpg">
+				</div> -->
+				<!-- <div class="hero-item set-bg" data-setbg="img/hero/1.jpg">
 					<div class="pa-text">
 						<div class="pa-tag">Hackquarantine App</div>
 						<h2>Covid Central</h2>
-						<div class="pa-author">
+						<div class="pa-author"> -->
 							<!--img src="img/Hero/author.jpg" alt=""-->
-							<h4>Aditya Rawat, JohnPaul Vela</h4>
+							<!-- <h4>Aditya Rawat, JohnPaul Vela</h4>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="hero-item set-bg" data-setbg="img/hero/2.jpg">
 					<div class="pa-text">
 						<div class="pa-tag">Hackquarantine App</div>
@@ -201,5 +211,6 @@
 	<script src="js/pana-accordion.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
