--- a/site/about.html
+++ b/site/about.html
@@ -84,8 +84,8 @@
 				</div>
 				<div class="profile-text text-white">
 					<h2>Hello!</h2>
-					<h2>I’m <strong>Glen Cross</strong></h2>
-					<p>I photograph very instinctively. I see how it is taken like that. I do not follow certain styles, philosophies or teachers.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					<h2>This Is <strong>COVID-Central</strong></h2>
+					<p>We bring awareness & offer solutions and aid to everyone, regardless if you are infected or not.</p>
 					<a href="#" class="profile-btn">Say Hello</a>
 					<a href="#" class="profile-email">colorlib@gmail.com</a>
 				</div>
