--- a/site/buy-tickets.html
+++ b/site/buy-tickets.html
@@ -41,11 +41,11 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="news.html">News</a></li>
                 <li class=""><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
               </ul>
             </nav>
           </div>
