--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Workshop &mdash; Colorlib Website Template</title>
+    <title>COVID Central</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -41,11 +41,11 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="speakers.html">Speakers</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
               </ul>
             </nav>
           </div>
@@ -59,10 +59,10 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-10">
-            <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Conference 2019</span>
-            <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web Design Conference 2019</h1>
-            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">September 6th-7th, Minnesota, United States</span>
-            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Buy Tickets</span></a>
+            <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Hack Quarantine 2020</span>
+            <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">COVID Central</h1>
+            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">The Information Hub For Today's World Wide Pandemic</span>
+            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Learn More</span></a>
           </div>
         </div>
       </div>
@@ -76,11 +76,11 @@
         <div class="row mb-5">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="site-section-heading">
-              <h2>Speakers</h2>
+              <h2>Basic Motivations</h2>
             </div>
           </div>
           <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
+            <p>COVID-19, popularly referred as the Coronavirus, is a virus that has caused a worldwide epidemic, changing the lives of everyone on Earth. With many rumours floating around about the virus, our web application hopes to inform society and bring aid to those who are suffering and display an analysis of the virus's impacts.</p>
           </div>
         </div>
 
@@ -350,8 +350,8 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
+            <h2 class="footer-heading text-uppercase mb-4">About Hack</h2>
+            <p>This Hack/Project Was Made For The 2020 HackQuarantine Hackathon</p>
           </div>
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
@@ -381,6 +381,7 @@
               Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
+              <p>Developed With <i class="icon-heart text-primary" aria-hidden="true"></i> By <a href="https://adityarawat.me" target="_blank" >Aditya Rawat</a> & <a href="">John Paul Vela</a></p>
             </div>
           </div>
         </div>
