--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
       <div class="container-fluid">
         <div class="row align-items-center">
           <div class="col-11 col-xl-2">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">Work<span class="text-primary">shop</span> </a></h1>
+            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">COVID<span class="text-primary">Central</span></a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
