--- a/site/index.html
+++ b/site/index.html
@@ -94,7 +94,7 @@
               <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer & Programmer</span>
               <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
               <p data-aos="fade-right" data-aos-delay="500">
-                Learn More About Aditya &mdash;
+                Connect With Aditya &mdash;
                 <a href="#" class="p-2"><span class="icon-github"></span></a>
                 <a href="#" class="p-2"><span class="icon-twitter"></span></a>
                 <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
@@ -114,7 +114,7 @@
               <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer, Programmer, & A Legend</span>
               <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
               <p data-aos="fade-left" data-aos-delay="500">
-                Learn More About JP &mdash;
+                Connect With JP &mdash;
                 <a href="#" class="p-2"><span class="icon-github"></span></a>
                 <a href="#" class="p-2"><span class="icon-twitter"></span></a>
                 <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
@@ -253,11 +253,11 @@
         <div class="row mb-5">
           <div class="col-lg-4">
             <div class="site-section-heading" data-aos="fade-up">
-              <h2>News</h2>
+              <h2>The Apps</h2>
             </div>
           </div>
           <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.</p>
+            <p>The following are the apps we developed for this website hack/project.</p>
           </div>
         </div>
 
@@ -266,47 +266,40 @@
             <a href="#" class="d-block mb-4">
               <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
             </a>
-            <h2 class="mb-4"><a href="#">Design your open source strategy</a></h2>
+            <h2 class="mb-4"><a href="#">Am I Safe?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
               <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
-              <div><span>By <a href="#">Emely Peters</a></span> &mdash; <span>Sep. 10, 2019</span></div> 
+              <div><span>By <a>JP-Vela</a></span></div> 
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.
+            <p>Am I Safe? is a location tracker app using <a href="Radar.io">Radar.io</a> that detects the user's current location and uses it to inform them whether or not they are safe and what safety procedures they should take. It also informs them of the cases that exists in their area.
           </div>
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
             <a href="#" class="d-block mb-4">
               <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
             </a>
-            <h2 class="mb-4"><a href="#">Design your open source strategy</a></h2>
+            <h2 class="mb-4"><a href="#">Help Me!</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
               <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
-              <div><span>By <a href="#">Emely Peters</a></span> &mdash; <span>Sep. 10, 2019</span></div> 
+              <div><span>By <a>Aditya Rawat</a></span></div> 
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.
+            <p>Help Me! is a chat app that has users create their own profiles in which they set their own status (i.e. Healthy, Sick, Related To Victim) and connect with others with the hope that people can socially help each other to push through these confusing and hard times.</p>
           </div>
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
             <a href="#" class="d-block mb-4">
               <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
             </a>
-            <h2 class="mb-4"><a href="#">Design your open source strategy</a></h2>
+            <h2 class="mb-4"><a href="#">What Is Going On?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
               <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
-              <div><span>By <a href="#">Emely Peters</a></span> &mdash; <span>Sep. 10, 2019</span></div> 
+              <div><span>By <a>Aditya Rawat & JP-Vela</a></span></div> 
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus.
-          </div>
-
-        </div>
-        <div class="row" data-aos="fade-up" data-aos-delay="500">
-          <div class="col-12 text-center">
-            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>More Blog Posts</span></a>
+            <p>What Is Going On? is a news app that scrapes data from Twitter and posts it onto viewable formats. There is also a section that scrapes data from news sites to show articles. With these two sources of information we wish to help end rumours and show the facts. We also show Coronavirus data like a basic virus tracker.</p>
           </div>
         </div>
       </div>
     </div>
-
     <div class="site-section">
       <div class="container">
         <div class="row mb-5">
@@ -346,7 +339,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">About Hack</h2>
+            <h2 class="footer-heading text-uppercase mb-4">About COVID Central</h2>
             <p>This Hack/Project Was Made For The 2020 HackQuarantine Hackathon</p>
           </div>
           <div class="col-md-3 ml-auto">
@@ -359,7 +352,7 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">Learn More About Us</h2>
+            <h2 class="footer-heading text-uppercase mb-4">Connect With Us</h2>
             <p>
               Aditya Rawat -
               <a href="#" class="p-2 pl-0"><span class="icon-linkedin"></span></a>
