--- a/helpMe.html
+++ b/helpMe.html
@@ -121,8 +121,7 @@
 
                         <div class="row form-group">
                             <div class="col-md-12">
-                                <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white"
-                                    onclick="addComment()">
+                                <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white"                                    onclick="addComment()">
                             </div>
                         </div>
 
