--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="amisafe.html">Am I Safe?</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contacts</a></li>
                 <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
