Fixed some bugs in amISafe.

--- a/amISafe.html
+++ b/amISafe.html
@@ -32,6 +32,8 @@
     <!--Get Radar.io library-->
     <script src="https://js.radar.io/v1.1.0/radar.min.js" integrity="sha384-9gzMIZTQDnuwordlQUv+j9r2TDNLAaKXhSk+p/1jZV0tlnDQ8Bu6YVmTbLIG+dRg" crossorigin="anonymous"></script>
 
+    <!--Get stitch library-->
+    <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.6.0/stitch.js"></script>
   </head>
   <body>
   
