Changed an image on index.html and centered Aditya's name.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+
+    </style>
   </head>
   <body>
   
@@ -89,7 +93,7 @@
             <img src="images/aditya.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-6 ml-auto">
-            <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Aditya Rawat</h2>
+            <h2 class="text-white mb-4 name aditya" data-aos="fade-right" data-aos-delay="200" style="text-align: center;">Aditya Rawat</h2>
             <div class="bio pl-lg-5">
               <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer & Programmer</span>
               <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
@@ -106,7 +110,7 @@
 
         <div class="row align-items-center speaker">
           <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
-            <img src="images/jp.jpg" alt="Image" class="img-fluid">
+            <img src="images/coolpic.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-6 ml-auto order-lg-1">
             <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">JohnPaul Vela</h2>
