Changed some app images on index.html.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-
+      .appImg {
+        border:1px solid #ff5733;
+        border-radius: 3px;
+      }
     </style>
   </head>
   <body>
@@ -268,7 +271,7 @@
         <div class="row mb-5">
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry"  data-aos="fade-up" data-aos-delay="200">
             <a href="#" class="d-block mb-4">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
+              <img src="images/am.png" alt="Image" class="img-fluid appImg"> 
             </a>
             <h2 class="mb-4"><a href="#">Am I Safe?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
@@ -280,7 +283,7 @@
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
             <a href="#" class="d-block mb-4">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
+              <img src="images/helpme.png" alt="Image" class="img-fluid appImg"> 
             </a>
             <h2 class="mb-4"><a href="#">Help Me!</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
@@ -292,7 +295,7 @@
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
             <a href="#" class="d-block mb-4">
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid"> 
+              <img src="images/what.png" alt="Image" class="img-fluid appImg"> 
             </a>
             <h2 class="mb-4"><a href="#">What Is Going On?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
