--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="amisafe.html">Am I Safe?</a></li>
-                <li><a href="news.html">News</a></li>
+                <li><a href="helpMe.html">Help Me!</a></li>
+                <li><a href="whatsGoingOng.html">What's Going On?</a></li>
+                <!--<li><a href="news.html">News</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
                 <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
               </ul>
