Added apps to navbar.

--- a/whatsGoingOn.html
+++ b/whatsGoingOn.html
@@ -50,7 +50,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="amisafe.html">Am I Safe?</a></li>
                 <li><a href="helpMe.html">Help Me!</a></li>
-                <li><a href="whatsGoingOng.html" class="active">What's Going On?</a></li>
+                <li><a href="whatsGoingOn.html" class="active">What's Going On?</a></li>
                 <!--<li><a href="news.html">News</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
                 <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
