--- a/amISafe.html
+++ b/amISafe.html
@@ -61,7 +61,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="amisafe.html" class="active">Am I Safe?</a></li>
                 <li><a href="helpMe.html">Help Me!</a></li>
-                <li><a href="whatsGoingOng.html">What's Going On?</a></li>
+                <li><a href="whatsGoingOn.html">What's Going On?</a></li>
                 <!--<li><a href="news.html">News</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
                 <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
