--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <div class="col-md-10">
             <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Hack Quarantine 2020</span>
             <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">COVID Central</h1>
-            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">The Information Hub For Today's World Wide Pandemic</span>
-            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Learn More</span></a>
+            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">The Information Hub For Today's Coronavirus Pandemic</span>
+            <a href="about.html" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Learn More</span></a>
           </div>
         </div>
       </div>
@@ -100,14 +100,15 @@
           <div class="col-lg-6 ml-auto">
             <h2 class="text-white mb-4 name aditya" data-aos="fade-right" data-aos-delay="200" style="text-align: center;">Aditya Rawat</h2>
             <div class="bio pl-lg-5">
-              <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer & Programmer</span>
+              <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer, Programmer, & A Legend</span>
               <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
               <p data-aos="fade-right" data-aos-delay="500">
                 Connect With Aditya &mdash;
-                <a href="#" class="p-2"><span class="icon-github"></span></a>
-                <a href="#" class="p-2"><span class="icon-twitter"></span></a>
+                <a href="https://github.com/aditya1rawat" class="p-2"><span class="icon-github"></span></a>
+                <!--a href="#" class="p-2"><span class="icon-twitter"></span></a>
                 <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
-                <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+                <a href="#" class="p-2"><span class="icon-instagram"></span></a-->
+                <a href="https://adityarawat.me/" class="p-2"><span class="icon-globe"></span></a>
               </p>
             </div>
           </div>
@@ -121,13 +122,14 @@
             <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">JohnPaul Vela</h2>
             <div class="bio pr-lg-5">
               <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer, Programmer, & A Legend</span>
-              <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
+              <p class="mb-4" data-aos="fade-left" data-aos-delay="400">JohnPaul began programming as a 12 year old starting out with blocks of code. Now he is involved in diffent fields of programming such as , robotics and full stack web  development.</p>
               <p data-aos="fade-left" data-aos-delay="500">
-                Connect With JP &mdash;
-                <a href="#" class="p-2"><span class="icon-github"></span></a>
-                <a href="#" class="p-2"><span class="icon-twitter"></span></a>
+                Connect With JohnPaul &mdash;
+                <a href="https://github.com/JP-Vela" class="p-2"><span class="icon-github"></span></a>
+                <!--a href="#" class="p-2"><span class="icon-twitter"></span></a>
                 <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
-                <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+                <a href="#" class="p-2"><span class="icon-instagram"></span></a-->
+                  <a href="https://jp-vela.github.io/index.html" class="p-2"><span class="icon-globe"></span></a>
               </p>
             </div>
           </div>
@@ -277,10 +279,10 @@
             </a>
             <h2 class="mb-4"><a href="#">Am I Safe?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
-              <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
+              <div class="mr-2"><img src="images/coolpic.jpg" alt="Image" class="img-fluid"></div>
               <div><span>By <a>JP-Vela</a></span></div> 
             </div>
-            <p>Am I Safe? is a location tracker app using <a href="Radar.io">Radar.io</a> that detects the user's current location and uses it to inform them whether or not they are safe and what safety procedures they should take. It also informs them of the cases that exists in their area.
+            <p>Am I Safe? is a location tracker app using <a href="Radar.io">Radar.io</a> that detects the user's current location and uses it to inform them whether or not they are safe and what safety procedures they should take.
           </div>
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
@@ -289,7 +291,7 @@
             </a>
             <h2 class="mb-4"><a href="#">Help Me!</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
-              <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
+              <div class="mr-2"><img src="images/aditya.jpg" alt="Image" class="img-fluid"></div>
               <div><span>By <a>Aditya Rawat</a></span></div> 
             </div>
             <p>Help Me! is a chat app that has users create their own profiles in which they set their own status (i.e. Healthy, Sick, Related To Victim) and connect with others with the hope that people can socially help each other to push through these confusing and hard times.</p>
@@ -301,10 +303,10 @@
             </a>
             <h2 class="mb-4"><a href="#">What Is Going On?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
-              <div class="mr-2"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></div>
+              <div class="mr-2"><img src="images/cool.jpg" alt="Image" class="img-fluid"></div>
               <div><span>By <a>Aditya Rawat & JP-Vela</a></span></div> 
             </div>
-            <p>What Is Going On? is a news app that scrapes data from Twitter and posts it onto viewable formats. There is also a section that scrapes data from news sites to show articles. With these two sources of information we wish to help end rumours and show the facts. We also show Coronavirus data like a basic virus tracker.</p>
+            <p>What's Going On? is a news app that scrapes data from Twitter and posts it onto viewable formats. There is also a section that scrapes data from news sites to show articles. With these two sources of information we wish to help end rumours and show the facts. We also show Coronavirus data like a basic virus tracker.</p>
           </div>
         </div>
       </div>
