--- a/whatsGoingOn.html
+++ b/whatsGoingOn.html
@@ -46,11 +46,11 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="amisafe.html">Am I Safe?</a></li>
                 <li><a href="helpMe.html">Help Me!</a></li>
-                <li><a href="whatsGoingOn.html" class="active">What's Going On?</a></li>
+                <li class="active"><a href="whatsGoingOn.html" class="active">What's Going On?</a></li>
                 <!--<li><a href="news.html">News</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
                 <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
