Added links for the news articles.

--- a/whatsGoingOn.html
+++ b/whatsGoingOn.html
@@ -197,11 +197,11 @@
 
             <div class="row"  data-aos="fade-up" data-aos-delay="100">
 
-                <div class="col-md-3">
-                    <h5 class="text-center newLine cool" style="font-size: 17px; ">Read the latest news headlines</h5>
+                <div class="col-md-4">
+                    <h5 class="text-center newLine cool" style="font-size: 17px; ">Read the latest news headlines. Click the source to read the full article</article></h5>
                 </div>
   
-                <div class="col-md-9">
+                <div class="col-md-8">
                     <table class="table">
                         <thead>
                           <tr>
