Change whatsGoingOn news titles to descriptions.

--- a/whatsGoingOn.html
+++ b/whatsGoingOn.html
@@ -197,7 +197,7 @@
             <div class="row"  data-aos="fade-up" data-aos-delay="100">
 
                 <div class="col-md-4">
-                    <h5 class="text-center newLine cool" style="font-size: 17px; ">Read the latest news headlines. Click the source to read the full article</article></h5>
+                    <h5 class="text-center newLine cool" style="font-size: 17px; ">Read a quick summary of the news updates on the coronavirus. Click the source to read the full article</article></h5>
                 </div>
   
                 <div class="col-md-8">
