Fixed header running into navBar on helpMe.html

--- a/helpMe.html
+++ b/helpMe.html
@@ -21,6 +21,15 @@
 
     <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.6.0/stitch.js"></script>
     <script src="jsAppFiles/helpMe.js"></script>
+
+    <style>
+        .top {padding-top: 20%;}
+        
+        
+        @media (min-width: 900px) {
+          .top {padding-top: 9%;}
+        }
+    </style>
 </head>
 
 <body onload="displayComments()">
@@ -62,7 +71,7 @@
             </div>
     </div>
     </header>
-    <div class="site-section">
+    <div class="site-section top">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-lg-4" data-aos="fade-up">
