--- a/amISafe.html
+++ b/amISafe.html
@@ -107,6 +107,8 @@
         <div class="row">
           <div class="col-md-8">
             <h5 class="cool" style="padding-bottom: 0px;">People Congestion Map:</h5>
+
+            <p style="font-size: 14px;">(Not getting your location?, you may need to change your privacy settings)</p>
             <div id="mapid" style="padding-top: 0px;"></div>  
 
           </div>
