Added show/hide replies.

--- a/helpMe.html
+++ b/helpMe.html
@@ -64,8 +64,12 @@
 
         .postReply {
             margin-top:5px; border:1px solid #f05d3c; background-color:rgba(0,0,0,0); border-radius:5px; font-size:14px;
+            color:#ff5733;
         }
 
+        .postReply::hover{
+            color:white;
+        }
     </style>
 </head>
 
@@ -119,7 +123,7 @@
                 </div>
                 <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
                     <p>Use This Chat App To Connect With Others Whether You Want To Aid Victims Of The Virus, Or Find
-                        Someone To Talk Your Way Out Of Boredom</p>
+                        Someone To Talk Your Way Out Of Boredom. Put your name below and start chatting. Start a new thread or continue one.</p>
                 </div>
             </div>
             <div class="row">
