A lot of front-end changes.

--- a/amISafe.html
+++ b/amISafe.html
@@ -65,7 +65,7 @@
                 <li><a href="whatsGoingOn.html">What's Going On?</a></li>
                 <!--<li><a href="news.html">News</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
+                
               </ul>
             </nav>
           </div>
@@ -175,24 +175,31 @@
         <div class="row mb-5">
           <div class="col-md-4">
             <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
+            <p>This Hack/Project Was Made For The 2020 HackQuarantine Hackathon</p>
           </div>
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Speakers</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="amisafe.html">Am I Safe?</a></li>
+              <li><a href="helpMe.html">Help Me!</a></li>
+              <li><a href="whatsGoingOn.html">What's Going On?</a></li>
+              <!--<li><a href="news.html">News</a></li>-->
+              <li><a href="contact.html">Contacts</a></li>
             </ul>
           </div>
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
+            <h2 class="footer-heading text-uppercase mb-4">Connect With Us</h2>
             <p>
-              <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-              <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-              <a href="#" class="p-2"><span class="icon-youtube"></span></a>
-              <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+              Aditya Rawat -
+              <a href="https://github.com/aditya1rawat" class="p-2"><span class="icon-github"></span></a>
+              <a href="https://adityarawat.me/" class="p-2"><span class="icon-globe"></span></a>
+            </p>
+            <p>
+              JP-Vela -
+              <a href="https://github.com/JP-Vela" class="p-2"><span class="icon-github"></span></a>
+              <a href="https://jp-vela.github.io/index.html" class="p-2"><span class="icon-globe"></span></a>
             </p>
           </div>
         </div>
