--- a/helpMe.html
+++ b/helpMe.html
@@ -98,11 +98,13 @@
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="active"><a href="speakers.html">Speakers</a></li>
-                                <li><a href="news.html">News</a></li>
+                                <li><a href="amisafe.html">Am I Safe?</a></li>
+                                <li class="active"><a href="helpMe.html">Help Me!</a></li>
+                                <li><a href="whatsGoingOn.html">What's Going On?</a></li>
+                                <!--<li><a href="news.html">News</a></li>-->
                                 <li><a href="contact.html">Contacts</a></li>
-                                <li class="cta"><a href="buy-tickets.html">Get Started</a></li>
-                            </ul>
+                                
+                              </ul>
                         </nav>
                     </div>
                     <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a
@@ -160,142 +162,54 @@
             <div id="comments"></div>
         </div>
     </div>
-    <div class="site-section" data-aos="fade">
-        <div class="container">
-            <div class="row mb-5 justify-content-center">
-                <div class="col-lg-4 mb-5">
-                    <div class="site-section-heading">
-                        <h2 class="text-center">Testimonials</h2>
-                    </div>
-                </div>
-            </div>
 
-            <div class="slide-one-item home-slider owl-carousel">
-
-                <div class="row justify-content-center">
-
-                    <div class="testimony text-center col-md-5">
-                        <figure>
-                            <img src="images/person_1.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem
-                                alias reprehenderit error quidem aliquam ad minus, veritatis modi.&rdquo;</p>
-                            <p class="author">&mdash; Emely Peters</p>
-                        </blockquote>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <div class="testimony text-center col-md-5">
-                        <figure>
-                            <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem
-                                alias reprehenderit error quidem aliquam ad minus, veritatis modi.&rdquo;</p>
-                            <p class="author">&mdash; Alex Anchors</p>
-                        </blockquote>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <div class="testimony text-center col-md-5">
-                        <figure>
-                            <img src="images/person_3.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem
-                                alias reprehenderit error quidem aliquam ad minus, veritatis modi.&rdquo;</p>
-                            <p class="author">&mdash; Aaron Thomas</p>
-                        </blockquote>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <div class="testimony text-center col-md-5">
-                        <figure>
-                            <img src="images/person_1.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem
-                                alias reprehenderit error quidem aliquam ad minus, veritatis modi.&rdquo;</p>
-                            <p class="author">&mdash; Emely Peters</p>
-                        </blockquote>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <div class="testimony text-center col-md-5">
-                        <figure>
-                            <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem
-                                alias reprehenderit error quidem aliquam ad minus, veritatis modi.&rdquo;</p>
-                            <p class="author">&mdash; Alex Anchors</p>
-                        </blockquote>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center">
-                    <div class="testimony text-center col-md-5">
-                        <figure>
-                            <img src="images/person_3.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                        <blockquote>
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime exercitationem
-                                alias reprehenderit error quidem aliquam ad minus, veritatis modi.&rdquo;</p>
-                            <p class="author">&mdash; Aaron Thomas</p>
-                        </blockquote>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <footer class="site-footer">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-4">
-                    <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit aliquid quibusdam fugit architecto.</p>
-                </div>
-                <div class="col-md-3 ml-auto">
-                    <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-                    <ul class="list-unstyled">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Speakers</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
-                    <p>
-                        <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-                        <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-                        <a href="#" class="p-2"><span class="icon-youtube"></span></a>
-                        <a href="#" class="p-2"><span class="icon-instagram"></span></a>
-                    </p>
-                </div>
+          <div class="row mb-5">
+            <div class="col-md-4">
+              <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
+              <p>This Hack/Project Was Made For The 2020 HackQuarantine Hackathon</p>
             </div>
-            <div class="row">
-
-                <div class="col-md-12 text-center">
-                    <div class="border-top pt-5">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                            template is made with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                </div>
+            <div class="col-md-3 ml-auto">
+              <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
+              <ul class="list-unstyled">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="amisafe.html">Am I Safe?</a></li>
+                <li><a href="helpMe.html">Help Me!</a></li>
+                <li><a href="whatsGoingOn.html">What's Going On?</a></li>
+                <!--<li><a href="news.html">News</a></li>-->
+                <li><a href="contact.html">Contacts</a></li>
+              </ul>
             </div>
+            <div class="col-md-4">
+                <h2 class="footer-heading text-uppercase mb-4">Connect With Us</h2>
+            <p>
+              Aditya Rawat -
+              <a href="https://github.com/aditya1rawat" class="p-2"><span class="icon-github"></span></a>
+              <a href="https://adityarawat.me/" class="p-2"><span class="icon-globe"></span></a>
+            </p>
+            <p>
+              JP-Vela -
+              <a href="https://github.com/JP-Vela" class="p-2"><span class="icon-github"></span></a>
+              <a href="https://jp-vela.github.io/index.html" class="p-2"><span class="icon-globe"></span></a>
+            </p>
+            </div>
+          </div>
+          <div class="row">
+            
+              <div class="col-md-12 text-center">
+                <div class="border-top pt-5">
+                <p>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
     </div>
 
