Added downloaded font.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <!--link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"-->
+    <link rel="stylesheet" href="fonts/roboto.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -23,7 +24,12 @@
       .appImg {
         border:1px solid #ff5733;
         border-radius: 3px;
+        
       }
+      
+   
+
+  
     </style>
   </head>
   <body>
@@ -70,6 +76,7 @@
         <div class="row align-items-center">
           <div class="col-md-10">
             <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Hack Quarantine 2020</span>
+
             <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">COVID Central</h1>
             <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">The Information Hub For Today's Coronavirus Pandemic</span>
             <a href="about.html" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Learn More</span></a>
