--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!--link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"-->
-    <link rel="stylesheet" href="fonts/roboto.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <!--link rel="stylesheet" href="fonts/roboto.css"-->
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -19,6 +19,24 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.3.1.min.js"></script>
+
+    <script>
+      function replaceGoogleCDN() {
+          $('link').each(function(){
+            var $intial  = $(this).attr('href'),
+                $replace = $intial.replace('//fonts.googleapis.com/', '//fonts.useso.com/');
+                $(this).attr('href', $replace);
+          });
+        }
+
+        $.getJSON('http://api.wipmania.com/jsonp?callback=?', function (data) { 
+            if ( data.address.country_code == 'CN' ) {
+              console.log(data.address.country_code);
+              replaceGoogleCDN();
+            }
+          });
+    </script>
 
     <style>
       .appImg {
@@ -403,7 +421,7 @@
 
   </div>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
+  
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
   <script src="js/popper.min.js"></script>
